fix popovers being able to overlap modals

--- a/client/assets/styles/scss/globals/var.scss
+++ b/client/assets/styles/scss/globals/var.scss
@@ -49,6 +49,6 @@ $z-header: 9000;
 $z-web-chrome: 8000;
 
 $z-modal-backdrop: 9996;
-$z-modal: 9997;
-$z-popover: 9998;
+$z-popover: 9997;
+$z-modal: 9998;
 $z-tooltip: 9999;
